--- a/src/components/WelcomeMain/WelcomeMain.scss
+++ b/src/components/WelcomeMain/WelcomeMain.scss
@@ -111,7 +111,8 @@
         height:50vh;
         .hand-line{
             width: 100%;
-            left: -40%;
+            left: -60%;
+            top: 10%;
             height: 50%;
         }
 
@@ -132,7 +133,7 @@
     }
 
         .mobile-text{
-            margin: 30px 0;
+            margin:  0;
             display: block;
         }
         .welcome_center_text {
