--- a/src/components/PaymentEvolution/PaymentEvolution.scss
+++ b/src/components/PaymentEvolution/PaymentEvolution.scss
@@ -48,7 +48,7 @@
   &__steps-track {
     display: flex;
     flex-direction: row-reverse;
-    gap: 50px;
+    gap: 40px;
     margin-block: 20px;
     // @include respond(phone) {
     //   padding-right: 150%;
@@ -62,14 +62,18 @@
     text-align: center;
     justify-content: center;
     width: 20vw;
+    height: 20vw;
     border: 0.75px solid #e7e9ea;
+    background-color: var(--back-grey);
     border-radius: 30px;
     padding: 20px;
-    opacity: 0.7;
+    opacity: 1;
+    transform: scale(1.2);
     cursor: pointer;
 
     @include respond(phone) {
       width: 50vw;
+      height: 50vw;
     }
 
     p {
@@ -84,12 +88,11 @@
       width: 100%;
     }
 
-    &--active {
+    &--nonactive {
       transform: none; // Убираем увеличение
-      background-color: var(--back-grey);
-      opacity: 1;
-      transform: scale(1.2);
-      
+      background-color: #fff;
+      opacity: 0.7;
+      transform: scale(1);
     }
   }
 
@@ -99,16 +102,32 @@
   }
   &__step:first-child {
     overflow: hidden;
-    img{
-      position: relative;
-      top:-25px;
-      transform: scale(1.1);
+    justify-content: flex-end;
+
+    img {
+      position: absolute;
+      top: 35%;
+      left: 45%;
+      transform: translate(-50%, -50%);
+
+      @include respond(phone) {
+        width: 80%;
+        top: 37%;
+        left: 45%;
+      }
     }
-  }
+
+    
+//     p{
+//       position: absolute;
+//       bottom: 0;
+//     }
+}
   
 
   &__step-details {
     width: 50%;
+    text-align: center;
     @include respond(phone) {
       width: 90vw;
       display: flex;
@@ -128,7 +147,9 @@
 
 
     
-    
+    .evolution__description{
+      padding: 0 10px;
+    }
     .evolution__description.expanded {
       height: 100px; 
       white-space: normal;
