--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,97 +1,136 @@
 @import "../../styles/mixins.scss";
 
 
+// .navbar{
+//     // background-color: var(--black);
+//     padding-block: 0.6rem;
+//     position: relative;
+    
+//     &_container {
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//     }
+
+//     &_logo img{
+//         width: 5rem;
+//         transform: scale(2);
+//     }
+   
+
+//     &_btns {
+//         display: flex;
+//         align-items: center;
+//         gap:1.5rem;
+
+//         a{
+//             text-transform: capitalize;
+//             color: var(--black);
+//         }
+//         @include respond(tab-port){
+//             display: none;
+//         }
+//     }
+//     &_menu{
+//         display: none;
+
+//         @include respond(tab-port){
+//             display: inline-block;
+//             font-size: 2.3rem;
+//             color:var(--spanish-gray);
+//         }
+
+//     }
+//     .show{
+//         display: flex;
+//     }
+//     .lng_btns{
+//         color:black;
+//         background-color: var(--back-grey);
+//         border-radius: 16px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//         gap:0.5rem;
+//         padding: 4px;
+//         a{
+//             padding: 8px;
+//             width: 56px;
+//             text-align: center;
+           
+//             border-radius: 12px;
+//         }
+//         .lang{
+//             background-color: white;
+//         }
+//     }
+
+// }
+
 .navbar{
-    // background-color: var(--black);
     padding-block: 0.6rem;
     position: relative;
+    justify-content: center;
+    align-items: center;
+
+    @include respond(phone){
+        padding-block: 20px;
+        // border-bottom: 1px solid black;
+        box-shadow: 0px 1px 4px 0px #88909733;
+
+    }
+    &_container{
+      display: flex;
+      justify-content: space-between;
     
-    &_container {
+    }
+    &_logo {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+        justify-content: center;
 
-    &_logo img{
-        width: 5rem;
-    }
-    ul{
-        display: flex;
-        align-items: center;
-        gap:3rem;
-
-        @include respond(tab-port){
-            flex-direction: column;
-            gap:1.2rem;
-            align-items: flex-start;
-            position: absolute;
-            top:100%;
-            left: 0;
-            padding: 2rem;
-            background-color: var(--black);
-            width: 100%;
-            border-top: 1px solid var(--spanish-gray);
-            display: none;
+        img{
+        width: 200px;
+        @include respond(phone){
+            width: 120px;
         }
-
-        a{
-            color: var(--grey);
-            // text-transform: uppercase;
-            transition: all 0.3s ease;
-            font-size: 18px;
-
-
-            &:hover{
-                color:var(--spanish-gray);
-            }
-        }
-    }
+        
+    }}
 
     &_btns {
-        display: flex;
-        align-items: center;
-        gap:1.5rem;
+            display: flex;
+            align-items: center;
+            gap:1.5rem;
 
-        a{
-            text-transform: capitalize;
-            color: var(--black);
-        }
-        @include respond(tab-port){
-            display: none;
-        }
-    }
-    &_menu{
-        display: none;
-
-        @include respond(tab-port){
-            display: inline-block;
-            font-size: 2.3rem;
-            color:var(--spanish-gray);
-        }
-
-    }
-    .show{
-        display: flex;
-    }
-    .lng_btns{
-        color:black;
-        background-color: var(--back-grey);
-        border-radius: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap:0.5rem;
-        padding: 4px;
-        a{
-            padding: 8px;
-            width: 56px;
-            text-align: center;
+            @include respond(phone){
+                gap:10px;
+            }
+            a{
+                text-transform: capitalize;
+                color: var(--black);
+                font-size: 14px;
+            }
            
-            border-radius: 12px;
         }
-        .lang{
-            background-color: white;
+       
+        .lng_btns{
+            color:black;
+            background-color: var(--back-grey);
+            border-radius: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap:0.5rem;
+            padding: 4px;
+            a{
+                padding: 8px;
+                width: 56px;
+                text-align: center;
+                
+                border-radius: 12px;
+            }
+            .lang{
+                background-color: white;
+            }
         }
-    }
-
+   
 }
