--- a/src/components/IdentificationType/IdentificationType.scss
+++ b/src/components/IdentificationType/IdentificationType.scss
@@ -36,8 +36,11 @@
 
     }
 .controls{
-  display: flex;
+  display: none;
   gap:10px;
+  @include respond(phone){
+    display: flex;
+  }
   span{
     display: inline-flex;
     justify-content: center;
@@ -53,20 +56,21 @@
 }
 .comparison-container {
     display: flex;
-    justify-content: space-around;
+    justify-content:  flex-start;
     margin: 20px;
-    gap:20px;
-   
+    
+   @include respond(phone){
+    justify-content:space-around;
+   }
   }
   
   .column {
-    width: 30%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     @include respond(phone){
       width: 80vw;
-
     }
   }
   @include respond(phone){
@@ -184,6 +188,13 @@
   .alaqan-green{
     color: white;
     background: #1ED768;
+  }
+
+  .mobile{
+    display: none;
+    @include respond(phone){
+      display: block;
+    }
   }
 
 }
