--- a/src/components/WelcomeMain/WelcomeMain.scss
+++ b/src/components/WelcomeMain/WelcomeMain.scss
@@ -29,7 +29,7 @@
         position: absolute;
         width: 30%;
         left: -10%;
-        top: 5%;
+        top: 10%;
         z-index: 10;
         img{
             width: 100%;
@@ -38,6 +38,7 @@
 
     .fade-text {
         transition: opacity 0.5s ease-in-out; /* Smooth transition */
+        
     }
       
     .fade-in {
@@ -80,14 +81,17 @@
             font-weight: 500;
             color: #FFFFFF;
             font-size: 96px;
-            max-width: 1050px;
+            max-width: 1000px;
             text-align: center;
             line-height: 1;
         }
         
         span {
+            display: inline-block;
+            width: 200px;
             color: #3AFC87;
             text-shadow: 0px 0px 10px #3AFC87;
+            
         }
     }
 
@@ -108,6 +112,8 @@
     }
     
     span {
+        display: inline-block;
+        width: 90px;
         color: #3AFC87;
         text-shadow: 0px 0px 10px #3AFC87;
     }
