--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,76 +1,8 @@
 @import "../../styles/mixins.scss";
-
-
-// .navbar{
-//     // background-color: var(--black);
-//     padding-block: 0.6rem;
-//     position: relative;
-    
-//     &_container {
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//     }
-
-//     &_logo img{
-//         width: 5rem;
-//         transform: scale(2);
-//     }
-   
-
-//     &_btns {
-//         display: flex;
-//         align-items: center;
-//         gap:1.5rem;
-
-//         a{
-//             text-transform: capitalize;
-//             color: var(--black);
-//         }
-//         @include respond(tab-port){
-//             display: none;
-//         }
-//     }
-//     &_menu{
-//         display: none;
-
-//         @include respond(tab-port){
-//             display: inline-block;
-//             font-size: 2.3rem;
-//             color:var(--spanish-gray);
-//         }
-
-//     }
-//     .show{
-//         display: flex;
-//     }
-//     .lng_btns{
-//         color:black;
-//         background-color: var(--back-grey);
-//         border-radius: 16px;
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-//         gap:0.5rem;
-//         padding: 4px;
-//         a{
-//             padding: 8px;
-//             width: 56px;
-//             text-align: center;
-           
-//             border-radius: 12px;
-//         }
-//         .lang{
-//             background-color: white;
-//         }
-//     }
-
-// }
-
 .navbar{
     padding-block: 0.6rem;
     position: relative;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     @include respond(phone){
