--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,7 @@
 
 html{
     scroll-behavior: smooth;
+    
 }
 body{
     box-sizing: border-box;
@@ -31,19 +32,19 @@ body{
     font-family: "Golos Text", serif;
     font-optical-sizing: auto;
     font-style: normal;
-    
-
 }
-
+#root{
+    overflow: hidden;
+}
 img{
     display: block;
 }
 
 .wrapper{
-    // max-width: 1500px;
+    max-width: 1300px;
     width: 100%;
-    padding-inline: 5rem;
     margin-inline: auto;
+    
 
 
     @include respond(tab-land){
@@ -70,17 +71,20 @@ img{
 }
 
 .section_wrapper{
-    max-width: 90%;
+    max-width: 1300px;
     padding-inline: 5rem;
     margin-inline: auto;
     margin-top: 30px;
     border-radius: 30px;
+
 
     @include respond(tab-land){
         padding-inline: 1.5rem;
     }
     @include respond(phone){
         padding-inline: 0.8rem;
-        margin: 30px;
+        
+        width: 95%;
+        margin-block: 30px;
     }
 }
