--- a/src/components/TerminalType/TerminalType.scss
+++ b/src/components/TerminalType/TerminalType.scss
@@ -87,16 +87,15 @@
           p {
             font-size: 18px;
             font-weight: 400;            
-            transition: opacity 0.3s ease, height 0.3s ease;
-
+            
             @include respond(phone){
               font-size: 14px;
             }
           }
-          p.hidden{
-            opacity: 0;
+          p.hid{
+            opacity: 1;
           }
-          p.visible {
+          p.vis {
             opacity: 1;
             height: auto;
           }
@@ -105,7 +104,7 @@
             width: auto;
             height: auto;
             position: relative;
-            bottom: 0;
+            bottom: 10%;
             will-change: transform;
 
             @include respond(phone){
